racegate/src/app/snapshots/racegate__app__race__tests__race_default.snap
---
source: src/app/race.rs
expression: race
---
Race {
    start_time: None,
    finish_time: None,
    duration: None,
}
