racegate/src/app/snapshots/racegate__app__race__tests__race_with_start_after_finish.snap
---
source: src/app/race.rs
expression: race
---
Race {
    start_time: Some(
        CoordinatedInstant(
            30000,
        ),
    ),
    finish_time: None,
    duration: None,
}
