racegate/src/app/snapshots/racegate__app__race__tests__race_with_start_gate_active.snap
---
source: src/app/race.rs
expression: race
---
Race {
    start_time: Some(
        CoordinatedInstant(
            10000,
        ),
    ),
    finish_time: None,
    duration: None,
}
