racegate/src/app/snapshots/racegate__app__race__tests__race_with_two_finish_activations.snap
---
source: src/app/race.rs
expression: race
---
Race {
    start_time: Some(
        CoordinatedInstant(
            10000,
        ),
    ),
    finish_time: Some(
        CoordinatedInstant(
            20000,
        ),
    ),
    duration: Some(
        10s,
    ),
}
